--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,15 @@
     rgba(157, 151, 237, 0) 100%
   );
 }
+
+::-webkit-scrollbar {
+  width: 3px;
+}
+::-webkit-scrollbar-track {
+  background: rgba(16, 16, 18, 0.95);
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #9d97ed;
+}
